tests/config_file_extensions/config_file_extensions.exp
Error ------------------------------------------------------------------------------------------------- test.js.es6:6:10

Cannot perform arithmetic operation because string [1] is not a number. [unsafe-addition]

   test.js.es6:6:10
   6|   return x * 10;
               ^

References:
   test.js.es6:9:5
   9| foo('Hello, world!');
          ^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ test.js.es6:14:19

Cannot get `Object.prototype.toString` because property `toString` [1] cannot be unbound from the context [2] where it
was defined. [method-unbinding]

   test.js.es6:14:19
    14| (Object.prototype.toString: Function);
                          ^^^^^^^^ [1]

References:
   <BUILTINS>/core.js:236:5
   236|     toString(): string;
            ^^^^^^^^^^^^^^^^^^ [2]



Found 2 errors
